fixed nav alignment

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav {
   text-align: right; }
 
 nav li {
-  margin-left: 10px;
+  margin-right: 10px;
   display: inline; }
 
 /* HEADER */
